--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ optin = true #opt-in: true/false
 
 [params]
 # You can use markdown here.
-BrandImage = "http://blog.appernetic.io/images/apperneticlogo.png" #top header brand image.
+BrandImage = "https://res.cloudinary.com/dtnahfj7l/v1491010365/khpzpjneoebqyce56psx" #top header brand image.
 brand = "My awsome blog" # brand image alt text.
 topline = "few words about your site"
 footline = "code with <i class='fa fa-heart'></i>"
