--- a/config.toml
+++ b/config.toml
@@ -69,8 +69,8 @@ optin = true #opt-in: true/false
 [params]
 # You can use markdown here.
 BrandImage = "" #top header brand image.
-brand = "My awsome blog" # brand image alt text.
-topline = "few words about your site"
+brand = "Go Wi.Fi" # brand image alt text.
+topline = "Get your instant Wi-Wfi access with GoWi.Fi"
 footline = "code with <i class='fa fa-heart'></i>"
 
 # Text for the top menu link, which goes to the root URL for the site.
@@ -81,7 +81,7 @@ mailmunchid = "" # Mailmunch site id
 sumomeid = "" # Sumome id
 
 # Show a sidebar menu
-showRightSidebar = true
+showRightSidebar = false
 # Select a syntax highlight.
 # Check the static/css/highlight directory for options.
 highlight = "default"
@@ -120,35 +120,29 @@ extensionmask = []
 [Languages]
 [Languages.en]
 weight = 1
-copyright = "(c) 2016 Copyright my blog"
+copyright = "(c) 2017 Copyright GoWi.Fi"
 title = "GoWi.Fi" # Site title
 
-[[Languages.en.menu.main]]
-name = "Blog"
-pre = ""
-weight = 2
-identifier = "post"
-url = "/post/"
+# [[Languages.en.menu.main]]
+# name = "Blog"
+# pre = ""
+# weight = 2
+# identifier = "post"
+# url = "/post/"
 
 [[Languages.en.menu.main]]
 name = "About"
 weight = 1
-identifier = ""
-url = "https://appernetic.io/app/#/about"
-pre = "<i class='fa fa-road'></i>"
+identifier = "about"
+url = "/about/"
+pre = ""
 
-[[Languages.en.menu.main]]
-name = "Dashboard"
-identifier = ""
-weight = 3
-url = "https://appernetic.io/app/"
-
-[[Languages.en.menu.footer]] # add  links to the bottom right corner.
-name = "Disclaimer"
-pre = "<i>&middot;</i>"
-identifier = "disclaimer"
-weight = 1
-url = "/disclaimer/"
+# [[Languages.en.menu.footer]] # add  links to the bottom right corner.
+# name = "Disclaimer"
+# pre = "<i>&middot;</i>"
+# identifier = "disclaimer"
+# weight = 1
+# url = "/disclaimer/"
 
 [[Languages.en.menu.footer]]
 name = "Terms"
@@ -158,28 +152,28 @@ url = "/terms/"
 
 [Languages.sv]
 weight = 2
-title = "Min blog" # Site title
-copyright = "(c) 2016 Alla rättigheter"
+title = "Go Wi.Fi" # Site title
+copyright = "(c) 2017 Alla rättigheter"
 
 [[Languages.sv.menu.main]]
-name = "Bloggen"
+name = "Om oss"
 pre = ""
 weight = 2
-identifier = "post"
-url = "/sv/post/"
+identifier = "om"
+url = "/sv/om/"
 
-[[Languages.sv.menu.footer]] # add  links to the bottom right corner.
-name = "Ansvarsfriskrivning"
-pre = "<i>&middot;</i>"
-identifier = "friskrivning"
-weight = 1
-url = "/sv/friskrivning/"
+# [[Languages.sv.menu.footer]] # add  links to the bottom right corner.
+# name = "Ansvarsfriskrivning"
+# pre = "<i>&middot;</i>"
+# identifier = "friskrivning"
+# weight = 1
+# url = "/sv/friskrivning/"
 
-[[Languages.sv.menu.footer]]
-name = "Vilkor"
-identifier = "vilkor"
-weight = 2
-url = "/sv/vilkor/"
+# [[Languages.sv.menu.footer]]
+# name = "Vilkor"
+# identifier = "vilkor"
+# weight = 2
+# url = "/sv/vilkor/"
 
 [Languages.sv.taxonomies]
 tag = "Taggar"
