--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # hostname (and path) to the root eg. https://appernetic.github.io/
-baseurl = "/"
+baseurl = "https://gowi.fi"
 
 DefaultContentLanguage = "en"
 
@@ -53,7 +53,7 @@ enablepopover = false #enable or disable popover: true/false.
 posturl = "https://zapier.com/hooks/catch/1227563/" # Your zapier post hook.
 headerimage = "//placehold.it/1000x600"
 expirecookie = 5 #show it again after number of days to visitors that has not subscribed.
-cookiename = "mycookie1" #give the cookie a unique name variable (avoid spaces and strange characters).
+cookiename = "mycookie21" #give the cookie a unique name variable (avoid spaces and strange characters).
 signupheader = "Join Our Newsletter"
 showmodaltimeout = 10000 #show popover modal after time interval in milliseconds.
 mouseleave = true #show popover when mouse leaves window: true/false.
