Update: config.toml

--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ paginate = 10
 paginatePath = "page"
 
 # Enable Disqus integration
-disqusShortname = "shortname"
+disqusShortname = "gowi-fi"
 
 
 [permalinks]
